Formatted the classes